--- a/adblock-betafish/options/options.css
+++ b/adblock-betafish/options/options.css
@@ -1,104 +1,13 @@
-/* Lato Regular latin-ext */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: normal;
-  src: url('/fonts/lato-ext-regular.woff') format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* Lato Regular latin */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: normal;
-  src: url('/fonts/lato-regular.woff') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* Lato Italic latin-ext */
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: normal;
-  src: url('/fonts/lato-ext-italic.woff') format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* Lato Italic latin */
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: normal;
-  src: url('/fonts/lato-italic.woff') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* Lato Bold Italic latin-ext */
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: bold;
-  src: url('/fonts/lato-ext-bolditalic.woff') format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* Lato Bold Italic latin */
-@font-face {
-  font-family: 'Lato';
-  font-style: italic;
-  font-weight: bold;
-  src: url('/fonts/lato-bolditalic.woff') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* Lato Bold latin-ext */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: bold;
-  src: url('/fonts/lato-ext-bold.woff') format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* Lato Bold latin */
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: bold;
-  src: url('/fonts/lato-bold.woff') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
+@import "adblock.css";
+@import "adblock-color-themes.css";
 
-* {
-  /* make 100% work as desired */
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-}
-:root {
-  --main-text-color: #666666;
-  --background-color: white;
-  --options-header-bg-color: #F1F1F1;
-  --options-footer-bg-color: #F1F1F1;
-  --teaser-theme-box-color: #666666;
-  --not-selected-checkbox-bg-color: #E6E6E6;
-  --bottom-line-color: #E6E6E6;
-  --speech-bubble-border-color: #E6E6E6;
-  --help-icon-color: #999999;
-  --help-icon-color-hovered: #666666;
-  --link-color: #1855ED;
-  --link-hovered-color: #F30D12;
-  --customize-dropdown-menu-icon-color: #F30D12;
-  --standout-text-color: #F30D12;
-  --adblock-logo-url: url(icons/logo.png);
-  --twitter-logo-url: url(icons/twitter-icon.svg);
-  --facebook-logo-url: url(icons/facebook-icon.svg);
-  --language-dropdown-icon-url: url(icons/dropdown_circle.svg);
-  --select-language-border-top-width: 1px;
-}
 body {
-  font-size: 16px;
   color: var(--main-text-color);
   overflow-y: scroll;
-  font-style: normal;
   line-height: 25px;
   background-color: var(--background-color);
-  font-family: "Lato", Arial, sans-serif;
-  -webkit-transition: background-color 250ms linear;
   transition: background-color 250ms linear;
+  -webkit-transition: background-color 250ms linear;
 }
 .page-title {
   font-size: 24px;
@@ -125,10 +34,11 @@ a:hover .link-text-color,
 a .link-text-color:hover {
   color: var(--link-hovered-color);
 }
-#header a:hover,
-#footer a:hover {
+#sidebar a:hover {
   color: var(--link-hovered-color);
   text-decoration: none;
+  transition: none;
+  -webkit-transition: none;
 }
 ::placeholder,
 ::-webkit-input-placeholder {
@@ -214,13 +124,18 @@ a .link-text-color:hover {
   padding-left: 35px;
   text-indent: -35px;
 }
-.checkbox-indentation + .extra-info {
+.extra-info {
   padding-left: 35px;
 }
 .bottom-line {
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: var(--bottom-line-color);
+}
+.top-line {
+  border-top-width: 1px;
+  border-top-style: solid;
+  border-top-color: var(--bottom-line-color, #E6E6E6);
 }
 
 /* BUTTONS */
@@ -271,148 +186,14 @@ a .link-text-color:hover {
 .btn.grey:hover {
   background-color: var(--grey-background-color-hover);
 }
-
-/* INPUT, TEXTAREA ETC */
-
-textarea::-webkit-scrollbar {
-  width: 14px;
-}
-textarea::-webkit-scrollbar-track {
-  box-shadow: none;
-  -webkit-box-shadow: none;
-}
-textarea::-webkit-scrollbar-thumb {
-  border-radius: 6px;
-  background-color: #E6E6E6;
-  background-clip: content-box;
-  border: 3px solid transparent;
-}
-
-/* HEADER */
-
-.adblock-logo img {
-  content: var(--adblock-logo-url);
-  width: 148px;
-  height: auto;
-}
-ul {
-  display: block;
-  -webkit-margin-after: 0em;
-  -webkit-margin-before: 0em;
-}
-#header {
-  background-color: var(--options-header-bg-color);
-  -webkit-transition: background-color 250ms linear;
-  transition: background-color 250ms linear;
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  right: 0px;
-  height: 84px;
-  z-index: 1;
-}
-#main_nav li {
-  float: left;
-  height: 64px;
-  padding: 30px 6px;
-  list-style-type: none;
-}
-#small_nav {
-  display: none;
-  cursor:pointer;
-  border:none;
-  position: absolute;
-  bottom: 25px;
-  right: 45px;
-  width: 42px;
-  height: 30px;
-  outline:none;
-  background-color: var(--options-header-bg-color);
-}
-#small_nav::after{
-  content:"";
-  width: 42px;
-  height:4px;
-  display:block;
-  position: absolute;
-  top: 3px;
-  right: 0;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  background: #6B6969;
-  box-shadow: 0 10px 0 #6B6969, 0 20px 0 #6B6969;
-}
-.adblock-logo {
-  margin: 20px 0px 0px 10px;
-}
-.social .facebook {
-  height: 23px;
-  width: 11px;
-  display: -webkit-box;
-}
-#facebook-icon {
-  content: var(--facebook-logo-url);
-  width: 20px;
-  height: 20px;
-}
-.social .twitter {
-  height: 22px;
-  width: 26px;
-  display: -webkit-box;
-}
-#twitter-icon {
-  content: var(--twitter-logo-url);
-  width: 20px;
-  height: 20px;
-}
-.social .facebook:hover,
-.social .twitter:hover {
-  background-position: left bottom;
-  transition: none;
-}
-.wrap {
-  position: relative;
-  margin: 0px auto;
-  max-width: 1200px;
-  padding: 0px 10px;
-}
-
-/* FOOTER */
-
-#footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 50px;
-  background-color: var(--options-footer-bg-color);
-  -webkit-transition: background-color 250ms linear;
-  transition: background-color 250ms linear;
-  z-index: 9;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#footer a,
-#footer span {
-  padding: 0px 25px;
-  text-decoration: none;
+.social .adblock-icons,
+.social .adblock-icons:hover {
+  padding: 0 5px;
+  color: var(--header-social-icons);
 }
 
 /* TABPAGES */
 
-#tabpages {
-  position: relative;
-  display: none;
-  padding-top: 155px; /* Keep same ratio w/ bottom */
-  bottom: 100px; /* Keep same ratio w/ padding-top */
-}
-#ui-tabs-1 div > p > input {
-  margin-left: 5px;
-}
-.ui-tabs-panel {
-  margin: 10px;
-}
 .option-page-box {
   display: flex;
   justify-content: center;
@@ -421,26 +202,9 @@ ul {
   display: flex;
   flex-direction: column;
   width: 630px;
+  margin: 25px 0;
 }
-.ui-tabs-nav {
-  position: fixed;
-  margin: 48px auto;
-  max-width: 1140px;
-  line-height: 20px;
-  z-index: 2;
-  right: 0;
-  left: 0;
-  top: 0;
-  display: flex;
-  justify-content: center;
-}
-.ui-tabs .ui-tabs-nav li {
-  float: left;
-  padding: 0px 5px;
-}
-.tab-lock-icon {
-  fill: var(--tab-lock-icon-color);
-}
+
 /* GENERAL TAB */
 
 #acceptable_ads_info {
@@ -460,22 +224,16 @@ ul {
   padding: 0px;
   list-style-type: none;
 }
-.svg-icon,
-svg#help-link-icon {
+.help-link-icon {
+  margin: 5px;
+  text-indent: 0;
+}
+.help-link-icon .material-icons {
   display: block;
-  height: 18px;
-  width: 18px;
-  margin-top: 5px;
-  margin-left: 5px;
+  color: var(--help-icon-color);
 }
-.svg-icon .icon-color,
-svg#help-link-icon .icon-color {
-  fill: var(--help-icon-color);
-}
-svg#help-link-icon:hover .icon-color,
-svg#help-link-icon .icon-color:hover {
-  cursor: pointer;
-  fill: var(--help-icon-color-hovered);
+.help-link-icon .material-icons:hover {
+  color: var(--help-icon-color-hovered);
 }
 .icons-preview .svg-icon {
   margin: 0;
@@ -500,15 +258,11 @@ svg#help-link-icon .icon-color:hover {
   margin-right: 50px;
 }
 .filter-list-link {
-  margin: 0px 10px;
-  vertical-align: text-top;
+  margin-left: 8px;
+  text-indent: 0;
 }
-.filter-list-icon {
-  height: 18px;
-  width: auto;
-}
-.filter-list-icon:hover .icon-color {
-  fill: var(--link-hovered-color);
+.filter-list-link .material-icons:hover {
+  color: var(--link-hovered-color);
 }
 .label-max-width {
   max-width: 70%;
@@ -542,6 +296,17 @@ svg#help-link-icon .icon-color:hover {
 .remove_filterList {
   padding-left: 10px;
 }
+#language-select-box {
+  position: relative;
+}
+#language-select-box .material-icons,
+#language-select-box .material-icons:hover {
+  color: var(--main-text-color);
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  pointer-events: none;
+}
 select#language_select {
   background-color: var(--background-color);
   border: 1px solid var(--main-text-color);
@@ -551,15 +316,13 @@ select#language_select {
   width: 212px;
   line-height: 25px;
   -webkit-appearance: none;
-  background-image: var(--language-dropdown-icon-url);
-  background-repeat: no-repeat;
-  background-position: calc(100% - 10px) 10px;
   border-top-width: var(--select-language-border-top-width);
 }
 select#language_select:hover,
 select#language_select:active,
 select#language_select:focus {
   cursor: pointer;
+  background: transparent;
   border: 1px solid var(--main-text-color);
   box-shadow: 0 5px 15px 0 rgba(10, 14, 71, 0.2);
   -webkit-box-shadow: 0 5px 15px 0 rgba(10, 14, 71, 0.2);
@@ -569,14 +332,13 @@ select#language_select optgroup {
   -webkit-appearance: none;
   background: none;
   background-color: var(--background-color);
-  color: var(--main-text-color);
+  color: var(--main-text-color, #666666);
   border-radius: 6px;
 }
 
 /* CUSTOMIZE TAB */
 
-.svg-box,
-.customize-dropdown-icon {
+.accordion-icon {
   line-height: 0;
   pointer-events: none;
   transition-delay: 0;
@@ -584,12 +346,12 @@ select#language_select optgroup {
   transition-property: all;
   transition-timing-function: ease-in-out;
 }
-.customize-dropdown-icon-color {
-  fill: var(--customize-dropdown-menu-icon-color);
-}
-.svg-box.upward {
+.accordion-icon.upward {
   pointer-events: none;
   transform: rotate(180deg);
+}
+.accordion-icon .material-icons {
+  color: var(--customize-dropdown-menu-icon-color);
 }
 .controlsLink > span {
   pointer-events: none;
@@ -762,31 +524,51 @@ textarea.widest {
   min-height: 200px;
 }
 
-/* NEW CHECKBOX ENTRY STYLE */
+/* NEW CHECKBOX IN GENERAL, FILTER TABS AND BUG-REPORT */
 
-.checkbox-indentation input[type="checkbox"] {
+.checkbox {
+  text-indent: 0;
+}
+.checkbox > * {
+  text-indent: 0;
+  position: absolute;
+  left: 0;
+}
+.checkbox > input[type=checkbox] {
+  opacity: 0;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+.checkbox > input[type=checkbox]:hover {
+  cursor: pointer;
+}
+.checkbox > i {
+  pointer-events: none;
+}
+.checkbox > input:checked ~ i.checked,
+.checkbox > input:not(:checked) ~ i.unchecked {
+  display: inline-block;
+}
+.checkbox > input:checked ~ i.unchecked,
+.checkbox > input:not(:checked) ~ i.checked {
   display: none;
 }
-.checkbox-indentation input + label::before {
-  content: "";
-  height: 26px;
-  width: 26px;
-  border-radius: 50%;
-  vertical-align: middle;
-  margin-right: 10px;
-  display: inline-block;
-  background-color: var(--not-selected-checkbox-bg-color);
+.checkbox .checked.md-stack-2x {
+  color: #05BCFC;
 }
-.checkbox-indentation input:checked + label::before {
-  background-image: url(icons/round_check.svg);
-  background-color: transparent;
-  background-repeat: no-repeat;
+.checkbox .unchecked {
+  font-weight: bold;
+  color: var(--not-selected-checkbox-bg-color);
 }
-.checkbox-indentation label {
+.checkbox ~ label {
+  padding-left: 10px;
   font-size: 18px;
 }
 
-/* BORDERED SPEECH BUBBLE COMPONENT */
+/* BORDERED SPEECH BUBBLE */
+
 .speech-bubble {
   min-height: 60px;
   width: fit-content;
@@ -855,8 +637,18 @@ textarea.widest {
   border-bottom-color: #03BCFC;
   box-shadow: 0 5px 15px 0 rgba(10, 14, 71, 0.2);
 }
-.theme-box:not(.selected):hover > .theme-box-top::before,
-.theme-box:not(.selected):hover > .theme-box-top::after {
+.theme-box .theme-box-top .material-icons.search,
+.theme-box .theme-box-top .material-icons.search:hover {
+  position: absolute;
+  top: 25px;
+  left: 50px;
+  z-index: -1000;
+  color: #F4F4F4;
+}
+.theme-box:not(.selected):hover .material-icons.search {
+  z-index: 5;
+}
+.theme-box:not(.selected):hover > .theme-box-top::before {
   content: "";
   top: 0px;
   right: 0px;
@@ -867,12 +659,6 @@ textarea.widest {
 .theme-box:not(.selected):hover > .theme-box-top::before {
   opacity: 0.75;
   background-color: #333;
-}
-.theme-box:not(.selected):hover > .theme-box-top::after {
-  background-repeat: no-repeat;
-  background-size: 70px 70px;
-  background-position: center;
-  background-image: url(icons/search.svg);
 }
 .theme-box:not(.selected):hover > .theme-box-bottom {
   color: white;
@@ -916,7 +702,6 @@ textarea.widest {
   justify-content: center;
   color: var(--teaser-theme-box-color);
 }
-
 .default-theme {
   color: #2A2A2A;
   border-width: 1px;
@@ -962,18 +747,27 @@ textarea.widest {
   height: 16px;
   width: 16px;
 }
-.theme-selected-icon {
+.md-stack.theme-selected-icon {
   display: none;
   top: -8px;
   right: -8px;
   position: absolute;
-  content: url(icons/round_check.svg);
+  z-index: 1;
 }
-.theme-box.selected + .theme-selected-icon {
+.md-stack.theme-selected-icon:hover {
+  cursor: default;
+}
+.md-stack.theme-selected-icon .md-stack-2x,
+.md-stack.theme-selected-icon .md-stack-2x:hover {
+  color: #05BCFC;
+}
+.theme-box.selected + .md-stack.theme-selected-icon {
   display: block;
 }
-.theme-wrapper {
+.theme-wrapper,
+.theme-box.teaser {
   position: relative;
+  margin: 8px 8px 8px 0;
 }
 .dark-overlay-preview {
   content: "";
@@ -1013,71 +807,153 @@ textarea.widest {
   top: -20px;
   right: -20px;
   position: absolute;
-  content: url(icons/error_icon.svg);
+}
+.fixed-box > .close-preview-icon > .md-stack-2x,
+.fixed-box > .close-preview-icon > .md-stack-2x:hover {
+  color: #E40D0D;
 }
 .fixed-box > .close-preview-icon:hover {
   cursor: pointer;
+}
+section .theme-section-row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* SIDEBAR */
+
+#sidebar {
+  --default-sidebar-width: 204px;
+  --small-with-icons-width: 60px;
+}
+#sidebar {
+  width: var(--default-sidebar-width, 204px);
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  width: fit-content;
+  max-width: 200px;
+  z-index: 1;
+  transition: background-color 250ms linear;
+  -webkit-transition: background-color 250ms linear;
+  background-color: var(--options-header-bg-color);
+}
+#sidebar-content {
+  position: relative;
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+#sidebar-adblock-logo {
+  width: 75%;
+  margin-left: calc(25% / 2);
+  height: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  content: var(--adblock-logo-url, url(icons/logo.png));
+}
+#sidebar-content-top,
+#sidebar-content-bottom {
+  display: flex;
+  display: -webkit-flex;
+  flex-direction: column;
+  align-items: center;
+}
+#sidebar-content-top {
+  width: 100%;
+}
+#sidebar-content-top #adblock-logo-link {
+  height: 100px;
+}
+#sidebar-content-top i {
+  color: #999999;
+}
+#sidebar-content-bottom i,
+#sidebar-content-bottom i:hover {
+  color: #999999;
+}
+#sidebar-content-bottom {
+  font-size: 14px;
+  width: fit-content;
+  min-width: 40%;
+}
+#sidebar-social-links {
+  display: flex;
+  width: 100%;
+  padding: 15px 0;
+  align-items: center;
+  justify-content: space-between;
+}
+#sidebar-content-bottom .top-line {
+  padding: 15px 0;
+  min-width: 50%;
+}
+
+/* BUG REPORT */
+
+.input-error {
+  border-color: var(--standout-text-color, #F30D12) !important;
+}
+#info  {
+  margin-top: 110px;
+}
+#bug-report-page-content {
+  margin-left: var(--defaul-sidebar-width, 204px);
 }
 
 /* Retina & hi DPI displays only */
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {}
 /* Screen resolution support */
-@media screen and (max-width: 1285px) {
-  .wrap {
-    max-width: 1080px;
+@media screen and (max-width: 840px) {
+  #sidebar-adblock-logo {
+    content: url(icons/ab-38.png);
+    margin-top: 35px;
   }
-}
-@media screen and (max-width: 1050px) {
-  .social {
+  #sidebar-content-bottom #sidebar-social-links {
+    flex-direction: column;
+  }
+  #sidebar-content-bottom #sidebar-social-links i {
+    margin-bottom: 15px;
+  }
+  #sidebar-content-bottom .top-line {
     display: none;
   }
-  .ui-tabs-nav {
-    justify-content: flex-end;
-    transition: all 1s ease-in-out;
+  #sidebar {
+    width: var(--small-sidebar-width, 60px);
   }
+  #bug-report-page-content {
+    margin-left: calc(var(--small-sidebar-width, 60px) + 25px);
   }
-  @media screen and (max-width: 840px) {
-  #small_nav {
-    display: block;
-  }
-  .ui-tabs-nav {
-    display: none;
-    opacity: 0.85;
-    margin-top: 23px;
-    right: 40px;
-    -webkit-padding-start: 0px;
-    z-index: 2;
-    background-color: var(--options-header-bg-color);
-    border-bottom: 1px solid var(--options-header-bg-color);
-    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .15);
-    box-shadow: 0px 0px 4px rgba(10, 0, 0, .15);
-    border-radius: 5px;
+  @media screen and (max-width: 700px) {
+    #channels#channels {
+      flex-wrap: wrap;
+      justify-content: start;
+    }
+    @media screen and (max-width: 600px) {
+      section .theme-section-row {
+        flex-wrap: wrap;
+        justify-content: start;
+      }
+    }
   }
 }
 
+@media screen and (max-height: 435px) {
+  #sidebar-content-bottom #sidebar-social-links {
+    display: none;
+  }
+}
 /* Chrome 49 compatability */
 
 #default_theme .adblock-logo img {
   content: url(icons/logo.png);
 }
-#default_theme #twitter-icon {
-  content: url(icons/twitter-icon.svg);
-}
-#default_theme #facebook-icon {
-  content: url(icons/facebook-icon.svg);
-}
-#default_theme #language_select{
-  content: url(icons/dropdown_circle.svg);
-}
 #dark_theme .adblock-logo img {
   content: url(icons/dark_theme/logo.png);
-}
-#dark_theme #twitter-icon {
-  content: url(icons/dark_theme/twitter-icon.svg);
-}
-#dark_theme #facebook-icon {
-  content: url(icons/dark_theme/facebook-icon.svg);
-}
-#dark_theme #language_select {
-  content: url(icons/dark_theme/dropdown_circle.svg);
 }
