Updated with version: 4.15.0 changes

--- a/adblock-betafish/uiscripts/adblock-wizard.css
+++ b/adblock-betafish/uiscripts/adblock-wizard.css
@@ -186,6 +186,10 @@ section.body-button {
   background-color: var(--button-cancel-background-hover);
 }
 
+#block_something_else_btn {
+  margin-right: 24px;
+}
+
 a.link {
   color: var(--link-color);
   text-decoration: none;
