Updated with version: 4.20.0 changes

--- a/adblock-betafish/adblock.css
+++ b/adblock-betafish/adblock.css
@@ -16,6 +16,7 @@ Global Styles
   --block-count-color: #ce0707;
   --background-color: white;
   --link-color: #2284f7;
+  --disabled-link-color: #c6c6c6;
   --popup-button: #ffca00;
   --popup-button-text: #666666;
   --popup-button-disabled-text: #666666;
