Updated with version: 4.21.0 changes

--- a/adblock-betafish/options/options.css
+++ b/adblock-betafish/options/options.css
@@ -152,6 +152,10 @@ a .link-text-color:hover {
 .hover-shadow:hover {
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
 }
+#local_cdn_option {
+  display: none;
+}
+
 /* BUTTONS */
 
 .btn {
