Updated with version: 4.24.0 changes

--- a/adblock-betafish/options/options.css
+++ b/adblock-betafish/options/options.css
@@ -158,6 +158,10 @@ a .link-text-color:hover {
 
 /* BUTTONS */
 
+button {
+  font-family: "Lato", Arial, sans-serif;
+}
+
 .btn {
   --font-weight-hover: bold;
   --btn-height: 35px;
